--- a/src/styleFolder/Navigation.css
+++ b/src/styleFolder/Navigation.css
@@ -52,7 +52,7 @@
 
 .dropdown-content-CV {
     display: none;
-    position: absolute;
+    position:fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     z-index: 1;
@@ -81,6 +81,7 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    position:fixed;
     min-width: 160px;
     z-index: 1;
 }
