--- a/src/styleFolder/HomePage.css
+++ b/src/styleFolder/HomePage.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 .content{
@@ -12,7 +13,7 @@
     flex-direction: row;
     align-items: center;
     height: 100%;
-    width: 50%
+    width: 70%
 }
 
 .info{
@@ -23,4 +24,5 @@
     position: fixed;
     z-index: -1;
     width: 100%;
+    height: 100vh;
 }
