--- a/src/styleFolder/HomePage.css
+++ b/src/styleFolder/HomePage.css
@@ -13,11 +13,13 @@
     flex-direction: row;
     align-items: center;
     height: 100%;
-    width: 70%
+    width: 55%;
 }
 
 .info{
     color: #CCCCCC;
+    text-align: justify;
+    padding: 3%;
 }
 
 .gif{
