--- a/src/styleFolder/HomePage.css
+++ b/src/styleFolder/HomePage.css
@@ -22,9 +22,25 @@
     padding: 3%;
 }
 
-.gif{
-    position: fixed;
+#videoBG {
+    position:fixed;
     z-index: -1;
-    width: 100%;
-    height: 100vh;
+
+/*not work if the screen ratio is below 16/9*/
+    width:100%;     
+    height: auto;
+}
+
+@media (min-aspect-ratio: 16/9) {
+    #videoBG {
+        width:100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    #videoBG { 
+        width:auto;
+        height: 100%;
+    }
 }
