--- a/src/styleFolder/Hardware.css
+++ b/src/styleFolder/Hardware.css
@@ -1,7 +1,6 @@
 .hardware{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     height: 100vh;
     overflow: hidden;
     background-color: #0A0A0A;
@@ -12,18 +11,46 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
-.hardwarecontent .search{
-    width: 708px;
-    height: 24px;
-    border: none;
-    resize: none;
+/*Search*/
+input{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 16px;
+    background: transparent;
+    width: 25px;
+    height: 25px;
+    padding: 10px;
+    border: solid 3px #CCCCCC;
     outline: none;
-    border-radius: 30px;
-    padding-top: 1%;
-    
+    border-radius: 35px;
+    transition: all 0.5s;
+    box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2), 0 6px 20px 0 #3f3f46;
 }
+
+input::placeholder{
+    color: #efefef;
+    opacity: 0;
+    transition: opacity 150ms ease-out;
+}
+
+input:focus::placeholder{
+    opacity: 1;
+}
+
+input:hover{
+    box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2), 0 6px 20px 0 #3f3f46;
+}
+
+input:focus,
+input:not(:placeholder-shown){
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.2), 0 6px 20px 0 #3f3f46;
+}
+
 
 /*Article CSS*/
 
@@ -79,9 +106,9 @@
 
 .filters{
     color:#CCCCCC;
-}
-
-/*Filters and Articles content*/
-
-.filterandart{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px;
 }
