--- a/src/styleFolder/Software.css
+++ b/src/styleFolder/Software.css
@@ -1,4 +1,4 @@
-.hardware{
+.software{
     display: flex;
     flex-direction: row;
     height: 100vh;
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-.hardwarecontent{
+.softwarecontent{
     margin-top: 80px;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
 
 /*Headers*/
 
-.hardware h1{
+.software h1{
     color: #CCCCCC;
 }
 
