--- a/src/styleFolder/Hardware.css
+++ b/src/styleFolder/Hardware.css
@@ -14,6 +14,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    animation: 2.5s linear 0s infinite running myScale;
+
+}
+
+@keyframes myScale{
+    50%{transform: scale(1.04);}
 }
 
 /*Search*/
